--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -10,11 +10,13 @@
 	list-style-type: none;
 	color: $off-white;
 }
+
 li {
 	a {
 		color: $yellow;
 	}
 }
+
 html {
 	scroll-behavior: smooth;
 	background-color: $off-black;
@@ -28,6 +30,7 @@ html {
 	border: 1px solid $gray-600;
 	box-shadow: 8px 8px 77px 0px rgba(6, 9, 18, 0.7);
 	width: 100%;
+	margin-top: 4rem;
 
 	.toolbar {
 		display: flex;
@@ -65,6 +68,7 @@ html {
 				opacity: 80%;
 				padding: 0;
 			}
+
 			.maximize {
 				width: 0.75rem;
 				height: 0.75rem;
@@ -73,6 +77,7 @@ html {
 				padding: 0;
 			}
 		}
+
 		.subtitle {
 			position: relative;
 			background: linear-gradient(90deg, #dee1ab 0%, #fae2af 50%, #c15544 100%);
@@ -83,10 +88,10 @@ html {
 	}
 
 	.cardcontent {
-		gap: 1rem;
+		gap: 2rem;
 		background: rgba($color: $off-black, $alpha: 0.5);
 		backdrop-filter: blur(10px);
-		padding: 1rem;
+		padding: 4rem;
 		border-radius: 0 0 1rem 1rem;
 		display: flex;
 		flex-direction: column;
@@ -111,6 +116,7 @@ html {
 		border: 1px solid $gray-600;
 		box-shadow: 8px 8px 77px 0px rgba(6, 9, 18, 0.7);
 	}
+
 	&.card-maximized {
 		position: absolute;
 		z-index: 10;
@@ -126,7 +132,7 @@ html {
 	align-self: stretch;
 	width: 100%;
 	margin: 0;
-	max-width: 500px;
+	max-width: 700px;
 
 	border-radius: 1rem;
 	border: 1px solid rgba($color: $blue-200, $alpha: 0.5);
@@ -148,8 +154,10 @@ html {
 		margin: 0;
 		width: 100%;
 	}
+
 	.content {
 		margin: 0;
+
 		subtitle {
 			color: $blue-200;
 		}
@@ -158,35 +166,46 @@ html {
 
 body {
 	transition: color 0.5s, background-color 0.5s;
-	line-height: 1.6;
+	line-height: 1.8;
 	font-family: "Be Vietnam Pro";
 	font-weight: regular;
-	font-size: 1.1rem;
+	font-size: 1.5rem;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	padding-bottom: 3rem;
 
 
 }
 
 strong {
 	font-family: Besley;
-	font-size: 1.1rem;
+	font-size: 1.5rem;
 	font-style: italic;
 	font-weight: 600;
-	line-height: 1.25rem;
+	line-height: 1.8rem;
 	letter-spacing: -0.03rem;
+	color: $yellow;
 }
 
 menuitem {
 	font-family: Besley;
-	font-size: 1.2rem;
+	font-size: 1.6rem;
 	font-style: italic;
-	line-height: 1.25rem; /* 125% */
+	line-height: 1.25rem;
+	/* 125% */
 	letter-spacing: -0.05rem;
 	font-weight: 700;
+	margin-bottom: 4rem;
+
+	@media (max-width: 1200px) {
+		width: 3rem;
+		font-size: 1.2rem;
+	}
+
+
 }
+
+
 
 .hero {
 	background: $gradfull;
@@ -198,10 +217,11 @@ menuitem {
 
 h1 {
 	font-family: Space Grotesk;
-	font-size: 3.5rem;
+	font-size: 4rem;
 	font-style: normal;
 	font-weight: bold;
-	line-height: 4rem; /* 114.286% */
+	line-height: 4rem;
+	/* 114.286% */
 	margin-bottom: -1rem;
 	background: $gradfull;
 	-webkit-background-clip: text;
@@ -216,27 +236,29 @@ h1 {
 }
 
 h2 {
-	font-size: 2.6rem;
+	font-size: 4rem;
 	font-weight: 600;
 }
 
 h3 {
-	font-size: 2rem;
+	font-size: 2.5rem;
 	font-weight: 500;
 	font-family: Be Vietnam Pro;
 	font-size: 3rem;
 	font-style: normal;
 	font-weight: 200;
-	line-height: 3.5rem; /* 116.667% */
+	line-height: 3.5rem;
+	/* 116.667% */
 	letter-spacing: -0.03rem;
 }
 
 h4 {
 	font-family: Besley;
-	font-size: 1.75rem;
+	font-size: 2rem;
 	font-style: italic;
 	font-weight: 600;
-	line-height: 2rem; /* 114.286% */
+	line-height: 2rem;
+	/* 114.286% */
 	letter-spacing: -0.04375rem;
 	background: $gradfull;
 	-webkit-background-clip: text;
@@ -246,10 +268,11 @@ h4 {
 
 h5 {
 	font-family: Besley;
-	font-size: 1.375rem;
+	font-size: 1.5rem;
 	font-style: italic;
 	font-weight: 600;
-	line-height: 1.5rem; /* 109.091% */
+	line-height: 1.5rem;
+	/* 109.091% */
 	letter-spacing: -0.03438rem;
 	color: $blue-200;
 }
@@ -259,17 +282,19 @@ h6 {
 	font-size: 1.5rem;
 	font-style: normal;
 	font-weight: 600;
-	line-height: 2rem; /* 133.333% */
+	line-height: 2rem;
+	/* 133.333% */
 	letter-spacing: -0.0525rem;
 	color: var(--off-white, #9fc8d9);
 }
 
 subtitle {
 	font-family: Be Vietnam Pro;
-	font-size: 1rem;
+	font-size: 1.24rem;
 	font-style: normal;
 	font-weight: 900;
-	line-height: 1rem; /* 114.286% */
+	line-height: 1.5rem;
+	/* 114.286% */
 	text-transform: uppercase;
 }
 
@@ -288,8 +313,9 @@ subtitle {
 }
 
 p {
-	line-height: 1.8rem;
-	margin: 0.5rem 0;
+	line-height: 2.4rem;
+
+
 }
 
 b {
@@ -301,6 +327,7 @@ a {
 	color: $plum-dark;
 	font-weight: 600;
 	transition: 0.2s;
+
 	&:hover {
 		background: linear-gradient(90deg, #dee1ab 0%, #c15544 50%, #5146cf 100%);
 		background-clip: text;
@@ -310,13 +337,10 @@ a {
 	}
 }
 
-img {
-	max-width: 100%;
-}
+img {}
 
 main {
-	max-width: $br-desktop;
-	margin: 0 auto;
+	margin: 0 8rem 0 24rem;
 	font-weight: normal;
 }
 
@@ -397,6 +421,7 @@ summary {
 		opacity: 0;
 		transform: translateY(-10px);
 	}
+
 	100% {
 		opacity: 1;
 		transform: translateY(0);
@@ -424,6 +449,7 @@ footer {
 	from {
 		transform: rotate(0deg);
 	}
+
 	to {
 		transform: rotate(360deg);
 	}
@@ -435,8 +461,11 @@ footer {
 
 .arrow3d {
 	align-items: center;
+
+
 	img {
 		animation: rotateAnimation 3s linear infinite;
+		width: 2.5rem;
 	}
 }
 
@@ -444,6 +473,7 @@ footer {
 	from {
 		transform: rotateY(45deg);
 	}
+
 	to {
 		transform: rotateY(225deg);
 	}
@@ -452,20 +482,22 @@ footer {
 :root {
 	--circle-size: 80%;
 	--blending: screen;
-	--color1: 60, 8, 180;
-	--color2: 140, 33, 56;
-	--color3: 242, 183, 74;
+	--color1: 47, 10, 71;
+	--color2: 5, 38, 81;
+	--color3: 177, 89, 106;
 	--color4: 193, 84, 68;
-	--color5: 131, 30, 112;
+	--color5: 15, 5, 26;
 }
 
 @keyframes moveInCircle {
 	0% {
 		transform: rotate(0deg);
 	}
+
 	50% {
 		transform: rotate(180deg);
 	}
+
 	100% {
 		transform: rotate(360deg);
 	}
@@ -475,9 +507,11 @@ footer {
 	0% {
 		transform: translateY(-50%);
 	}
+
 	50% {
 		transform: translateY(50%);
 	}
+
 	100% {
 		transform: translateY(-50%);
 	}
@@ -487,9 +521,11 @@ footer {
 	0% {
 		transform: translateX(-50%) translateY(-10%);
 	}
+
 	50% {
 		transform: translateX(50%) translateY(10%);
 	}
+
 	100% {
 		transform: translateX(-50%) translateY(-10%);
 	}
