--- a/src/assets/scss/main.css
+++ b/src/assets/scss/main.css
@@ -32,7 +32,7 @@ html {
   border: 1px solid #22303f;
   border-radius: 1rem 1rem 0 0;
   background-color: rgba(16, 20, 25, 0.7843137255);
-  background: url("../../../public/img/cardheader.png") repeat fixed 10% 10%;
+  background: url("../ /img/cardheader.png") repeat fixed 10% 10%;
   background-size: 90%;
 }
 .card .toolbar .toolkit {
@@ -85,7 +85,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: rgba(16, 20, 25, 0.7843137255);
-  background: url("../../../public/img/bgfilter.png") repeat fixed 10% 10%;
+  background: url("../ /img/bgfilter.png") repeat fixed 10% 10%;
   background-size: 90%;
 }
 
