--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -23,6 +23,28 @@ html {
 	cursor: url("/pointer-default.svg"), auto;
 }
 
+
+.aboutcontent {
+	display: flex;
+	gap: 4rem;
+	width: 100%;
+
+	@media (max-width: 1000px) {
+		flex-direction: column;
+	}
+
+
+	@media (min-width: 1600px) {
+		flex-direction: column;
+		max-width: 100%;
+		gap: 4rem;
+		justify-content: center;
+
+	}
+}
+
+
+
 .card {
 	display: flex;
 	flex-direction: column;
@@ -31,6 +53,10 @@ html {
 	box-shadow: 8px 8px 77px 0px rgba(6, 9, 18, 0.7);
 	width: 100%;
 	margin-top: 4rem;
+
+	@media (min-width: 1600px) {
+		width: 70%;
+	}
 
 	.toolbar {
 		display: flex;
