--- a/src/assets/scss/base.css
+++ b/src/assets/scss/base.css
@@ -23,6 +23,9 @@ html {
   box-shadow: 8px 8px 77px 0px rgb(6, 9, 18);
   width: 100%;
 }
+
+
+
 .card .toolbar {
   display: flex;
   justify-content: center;
@@ -79,7 +82,7 @@ html {
 body {
   transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
-  font-family: "Be Vietnam Pro";
+  font-family: "Figtree";
   font-weight: regular;
   font-size: 1.1rem;
   text-rendering: optimizeLegibility;
@@ -123,7 +126,7 @@ h2 {
 h3 {
   font-size: 2rem;
   font-weight: 500;
-  font-family: Be Vietnam Pro;
+  font-family: Figtree;
   font-size: 3rem;
   font-style: normal;
   font-weight: 200;
@@ -132,7 +135,7 @@ h3 {
 }
 
 .subtitle {
-  font-family: Be Vietnam Pro;
+  font-family: Figtree;
   font-size: 1rem;
   font-style: normal;
   font-weight: 900;
