--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -23,9 +23,9 @@ html {
 	cursor: url("/pointer-default.svg"), auto;
 }
 
-
 .aboutcontent {
 	display: flex;
+	flex-direction: column;
 	gap: 4rem;
 	width: 100%;
 
@@ -33,17 +33,13 @@ html {
 		flex-direction: column;
 	}
 
-
 	@media (min-width: 1600px) {
 		flex-direction: column;
 		max-width: 100%;
 		gap: 4rem;
 		justify-content: center;
-
 	}
 }
-
-
 
 .card {
 	display: flex;
@@ -151,6 +147,34 @@ html {
 	}
 }
 
+.minicard {
+
+
+
+	.cardcontent {
+		padding: 2rem;
+		border-radius: 1rem;
+		flex-direction: row;
+	}
+}
+
+.infinite-slider {
+	overflow: hidden;
+	width: 100%;
+}
+
+.slider-track {
+	display: flex;
+	white-space: nowrap;
+	transition: transform 0.1s linear;
+}
+
+.slider-item {
+	flex: 0 0 auto;
+	width: calc(100% / 4); /* Adjust this value based on the number of visible items */
+	padding: 1rem;
+}
+
 .img-flex {
 	display: flex;
 	flex-wrap: wrap;
@@ -160,6 +184,33 @@ html {
 	box-sizing: border-box; // Ensures padding and borders are included in the width and height
 
 	a {
+		flex: 1 1 calc(33.333% - 2rem); // 3 images per row
+		aspect-ratio: 1; // Ensures the image remains square
+		object-fit: cover; // Ensures the image covers the area while maintaining its aspect ratio
+		width: 100%;
+		opacity: 60%;
+		transition-property: opacity;
+		transition-duration: 0.5s;
+		transition-timing-function: linear;
+		background: center center/cover no-repeat;
+		border-radius: 1rem;
+		overflow: hidden;
+		transition: border-radius 0.25s ease, opacity 0.5s;
+
+		&:hover {
+			opacity: 1;
+			border-radius: 2rem;
+			transition: border-radius 0.25s ease, opacity 0.5s;
+			color: $off-black;
+		}
+
+		img {
+			width: 100%;
+		}
+	}
+	img {
+		position: relative;
+		top: 0%;
 		flex: 1 1 calc(33.333% - 2rem); // 3 images per row
 		aspect-ratio: 1; // Ensures the image remains square
 		object-fit: cover; // Ensures the image covers the area while maintaining its aspect ratio
@@ -184,37 +235,49 @@ html {
 			width: 100%;
 		}
 	}
+}
+
+.buttonimgcontainer {
+	text-align: center;
+	top: 0%;
+	flex: 1 1 calc(33.333% - 2rem); // 3 images per row
+	aspect-ratio: 1; // Ensures the image remains square
+	object-fit: cover; // Ensures the image covers the area while maintaining its aspect ratio
+	width: 100%;
+	opacity: 60%;
+	transition-property: opacity;
+	transition-duration: 0.5s;
+	transition-timing-function: linear;
+	background: center center/cover no-repeat;
+	border-radius: 1rem;
+	transition: border-radius 0.25s ease, opacity 0.5s;
+
+	&:hover {
+		opacity: 100%;
+		border-radius: 2rem;
+		transition: border-radius 0.25s ease, opacity 0.5s;
+	}
 
 	img {
 		width: 100%;
-		flex: 1 1 calc(50% - 2rem); // 3 images per row
-		aspect-ratio: 1; // Ensures the image remains square
-		object-fit: cover; // Ensures the image covers the area while maintaining its aspect ratio
-		opacity: 60%;
-		transition-property: opacity;
-		transition-duration: 0.5s;
-		transition-timing-function: linear;
-		background: center center/cover no-repeat;
-		border-radius: 1rem;
-		overflow: hidden;
-		transition: border-radius 0.25s ease, opacity 0.5s;
+	}
+
+	.button-container {
+		position: relative;
+	}
+
+	h5 {
+		position: absolute;
+		top: 45%;
+		width: 100%;
+		color: $off-white;
+		transition: color 0.25s ease, opacity 0.5s;
+		transition: font-size 0.25s ease, opacity 0.2s;
+		opacity: 100%;
 
 		&:hover {
-			opacity: 100%;
-			border-radius: 2rem;
-			transition: border-radius 0.25s ease, opacity 0.5s;
-		}
-	}
-
-	@media (max-width: 768px) {
-		img {
-			flex: 1 1 calc(50% - 2rem); // 2 images per row on smaller screens
-		}
-	}
-
-	@media (max-width: 480px) {
-		img {
-			flex: 1 1 calc(100% - 2rem); // 1 image per row on very small screens
+			color: $off-white;
+			font-size: 3rem;
 		}
 	}
 }
@@ -261,8 +324,8 @@ html {
 
 body {
 	transition: color 0.5s, background-color 0.5s;
-	font-family: "Be Vietnam Pro";
-	font-weight: regular;
+	font-family: "Figtree";
+	font-weight: 300;
 	font-size: 1.5rem;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
@@ -272,7 +335,7 @@ body {
 .bodysmall {
 	transition: color 0.5s, background-color 0.5s;
 	line-height: 1.2;
-	font-family: "Be Vietnam Pro";
+	font-family: "Figtree";
 	font-weight: regular;
 	font-size: 1.2rem;
 	text-rendering: optimizeLegibility;
@@ -342,7 +405,7 @@ h2 {
 h3 {
 	font-size: 2.5rem;
 	font-weight: 500;
-	font-family: Be Vietnam Pro;
+	font-family: Figtree;
 	font-size: 3rem;
 	font-style: normal;
 	font-weight: 200;
@@ -377,10 +440,10 @@ h5 {
 }
 
 h6 {
-	font-family: Be Vietnam Pro;
-	font-size: 1.8rem;
+	font-family: Figtree;
+	font-size: 1.7rem;
 	font-style: normal;
-	font-weight: 600;
+	font-weight: 700;
 	line-height: 2rem;
 	/* 133.333% */
 	letter-spacing: -0.0525rem;
@@ -388,9 +451,8 @@ h6 {
 }
 
 subtitle {
-	font-family: Be Vietnam Pro;
+	font-family: Figtree;
 	font-size: 1.24rem;
-	font-style: normal;
 	font-weight: 900;
 	line-height: 1.5rem;
 	/* 114.286% */
@@ -429,7 +491,6 @@ a {
 		background: linear-gradient(90deg, #dee1ab 0%, #c15544 50%, #5146cf 100%);
 		background-clip: text;
 		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
 		cursor: url("/public/pointer-hover.svg"), auto;
 	}
 }
@@ -559,7 +620,9 @@ footer {
 }
 
 .arrow3d {
-	align-items: center;
+	padding-top: 2rem;
+	display: flex;
+	justify-content: center;
 
 	img {
 		animation: rotateAnimation 3s linear infinite;
